feat(relayapi): add Jev evaluations
